# lua-cmake

./: .gitignore  CMakeLists.txt  README.md
patch/: README.md
patch/0000_utf8_win32/: README.md  diff.patch
patch/0000_utf8_win32/diff/new/: README.md
patch/0000_utf8_win32/diff/new/src/: lprefix.h  lua_patch_0000_utf8_win32.c  lua_patch_0000_utf8_win32.h
patch/0000_utf8_win32/diff/old/: CMakeLists.txt  README.md
src/: Makefile
